--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "uvicorn[standard] (>=0.35.0,<0.36.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "motor (>=3.7.1,<4.0.0)"
+    "motor (>=3.7.1,<4.0.0)",
+    "aiokafka (>=0.12.0,<0.13.0)"
 ]
 
 [tool.poetry]
