--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "motor (>=3.7.1,<4.0.0)",
-    "aiokafka (>=0.12.0,<0.13.0)"
+    "aiokafka (>=0.12.0,<0.13.0)",
+    "kafka-python (>=2.2.15,<3.0.0)"
 ]
 
 [tool.poetry]
